# search_hybrid

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.airgap.yml  docker-compose.yml  pyproject.toml  run_ui.cmd
app/: __init__.py  dependencies.py  main.py
app/api/routes/: search.py  ui.py
app/clients/: elasticsearch_client.py  graph_client.py  milvus_client.py
app/core/: config.py  logging.py
app/domain/: construction.py
app/models/: schemas.py
app/services/: cache.py  embedding_service.py  free_answer_service.py  hybrid_search_service.py  llm_gateway.py  llm_reranker.py  ranking.py  sample_store.py  source_service.py  upload_document_service.py
app/utils/: compat.py
data/: cp949_test.txt
docs/: AIR_GAP_DEPLOYMENT.md  ARCHITECTURE_ALGORITHM_SPEC.md  ARCHITECTURE_AND_ALGORITHMS.md  CONSTRUCTION_TOPDOWN_PLAYBOOK.md  PLAN_MVP.md
infra/nginx/: nginx.conf
infra/redis/: redis.conf
infra/schemas/: elasticsearch_documents_mapping.json  elasticsearch_documents_mapping_ko_nori.json  neo4j_init.cypher
sample_data/: sample_docs.json
scripts/: check_runtime.py  ollama_bootstrap.sh  run_integrated_smoke_check.py  run_sample_query.py  test_bedrock_connection.py
scripts/airgap/: build_offline_bundle.sh  deploy_airgap.sh  load_bundle.sh
templates/: index.html
tests/: test_ask_fallback.py  test_construction_domain.py  test_construction_query_logic.py  test_hybrid_search_service.py  test_llm_gateway.py  test_ranking.py  test_sources_delete_api.py  test_upload_service.py
