[project]
name = "hybrid-search-platform"
version = "0.1.0"
description = "Hybrid search platform integrating Elasticsearch, Milvus, Graph DB, Redis cache, and LLM reranking."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "httpx>=0.28.0",
  "boto3>=1.35.0",
  "jinja2>=3.1.0",
  "olefile>=0.47",
  "python-multipart>=0.0.20",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "redis>=6.4.0",
  "neo4j>=5.28.0",
  "pymilvus>=2.6.0",
  "PyMuPDF>=1.24.0",
  "python-docx>=1.1.2",
  "openpyxl>=3.1.5",
  "python-pptx>=0.6.23",
  "litellm>=1.67.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "pytest-asyncio>=1.1.0",
  "ruff>=0.12.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
